--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,11 @@ header {
     width: 100%;
     height: 100vh;
     position: relative;
-    background-color: crimson;
+    background-color: #000;
 }
 
 h1 {
+    color: #fff;
     text-align: center;
     display: inline-block;
     position: absolute;
